# wow-packet-viewer

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
capture-dll/: Cargo.toml
capture-dll/src/: hooks.rs  ipc.rs  lib.rs  version.rs  wndproc.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/capture/: injector.rs  ipc.rs  mod.rs  packets.rs  process.rs  session_store.rs
src/components/: FilterBar.tsx  PacketDetail.tsx  PacketLog.tsx  ProcessPanel.tsx  SessionOpenDialog.tsx  SessionTabs.tsx  WindowHeader.tsx
src/packet-parser/: BinaryReader.ts  compression.ts  definitions.ts  index.ts  parser.ts  registry.ts  types.ts
src/packet-parser/expansions/vanilla/: aura.ts  character.ts  chat.ts  cinematic.ts  combat.ts  experience.ts  faction.ts  gossip.ts  index.ts  loginLogout.ts  loot.ts  mail.ts  misc.ts  movement.ts  queries.ts  quest.ts  raid.ts  shared.ts  social.ts  spell.ts  spellCast.ts  spellDamage.ts  spellLog.ts  updateObject.ts  world.ts
